--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head id="shouye">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="./static/libs/scrollReveal/scrollreveal.min.js"></script>
@@ -11,20 +11,20 @@
   <link rel="stylesheet" href="./static/libs/glide/glide.theme.min.css" />
   <link rel="stylesheet" href="./style.css" />
 
-  <title>慷梭-创新科技企业领军者</title>
+  <title>河北合舜机械科技有限公司</title>
 </head>
 
 <body>
   <header>
-    <div class="logo">慷梭电子科技</div>
+    <div class="logo">河北合舜机械科技有限公司</div>
     <nav>
-      <a href="#">首页</a>
-      <a href="#">关于我们</a>
-      <a href="#">成功案例</a>
-      <a href="#">服务流程</a>
-      <a href="#">团队介绍</a>
-      <a href="#">公司动态</a>
-      <a href="#"><i class="fas fa-search"></i></a>
+      <a href="#shouye">首页</a>
+      <a href="#guanyuwomen">关于我们</a>
+      <a href="#chenggonganli">成功案例</a>
+      <a href="#fuwuliucheng">服务流程</a>
+      <a href="#tuanduijieshao">团队介绍</a>
+      <a href="#gongsidongtai">公司动态</a>
+<!--      <a href="#"><i class="fas fa-search"></i></a>-->
     </nav>
     <!-- 折叠导航按钮 -->
     <div class="burger">
@@ -73,7 +73,7 @@
   </div>
   <div class="content-wrapper">
     <section id="about-us" class="about-us">
-      <h2 class="title1">关于我们</h2>
+      <h2 class="title1" id="guanyuwomen">关于我们</h2>
       <div class="intro">
         <p>
           智慧科技公司，总投资500万元。
@@ -125,7 +125,7 @@
       </div>
     </section>
     <section id="showcases" class="showcases section-bg">
-      <h2 class="title1">成功案例</h2>
+      <h2 class="title1" id="chenggonganli">成功案例</h2>
       <div class="filter-btns">
         <button class="filter-btn active" data-filter="*">全部</button>
         <button class="filter-btn" data-filter=".web">WEB</button>
@@ -160,7 +160,7 @@
       </div>
     </section>
     <section id="service" class="service">
-      <h2 class="title1">服务流程</h2>
+      <h2 class="title1" id="fuwuliucheng">服务流程</h2>
       <p class="intro">
         网络综合公司，提供包括网络基础服务（比如域名，主机，邮箱）和网络增值服务（如网站建设和推广，网站优化）等业务
       </p>
@@ -210,7 +210,7 @@
       </div>
     </section>
     <section id="team-intro" class="team-intro section-bg">
-      <h2 class="title1">团队介绍</h2>
+      <h2 class="title1" id="tuanduijieshao">团队介绍</h2>
       <div class="team-members">
         <div class="team-member">
           <div class="profile-image">
@@ -289,7 +289,7 @@
       </div>
     </section>
     <section id="company-activities" class="company-activities">
-      <h2 class="title1">公司动态</h2>
+      <h2 class="title1" id="gongsidongtai">公司动态</h2>
       <p class="intro">关注公司动态，获取一手信息</p>
       <div class="activities">
         <div class="activity">
@@ -401,8 +401,8 @@
           <li><a href="#">文档资源</a></li>
         </ul>
       </div>
-      <p class="icp-info">陕ICP备19016694号</p>
-      <p class="rights">&copy; 2020 智慧科技有限公司</p>
+<!--      <p class="icp-info">陕ICP备19016694号</p>-->
+<!--      <p class="rights">&copy; 2020 智慧科技有限公司</p>-->
       <div class="scroll-to-top">
         <a href="#"><i class="fas fa-chevron-up"></i></a>
       </div>
