--- a/index.html
+++ b/index.html
@@ -362,10 +362,11 @@
     <div class="footer-menus">
       <div class="contact-us">
         <p class="menu-title">联系我们</p>
-        <p>地址：</p>
+        <p>地址</p>
         <p>电话</p>
         <p>传真</p>
-        <p>电子邮件：llgworks@163.com</p>
+<!--        <p>电子邮件：llgworks@163.com</p>-->
+        <p>电子邮件</p>
       </div>
       <div class="service-menu footer-menu">
         <p class="menu-title">服务概览</p>
@@ -403,6 +404,9 @@
       </div>
 <!--      <p class="icp-info">陕ICP备19016694号</p>-->
 <!--      <p class="rights">&copy; 2020 智慧科技有限公司</p>-->
+      <p class="rights">&copy; 本网站仅供交流与学习使用，所有内容仅供参考，严禁用于商业用途。请尊重版权与知识产权。</p>
+      <p class="rights">&copy; 本网站旨在促进学习与学术交流，所有信息仅供个人学习使用，禁止用于任何商业或非法用途。</p>
+      <p class="rights">&copy; 本网站所提供的内容仅供教育和交流之用，不得用于任何形式的商业活动或其他违法用途。</p>
       <div class="scroll-to-top">
         <a href="#"><i class="fas fa-chevron-up"></i></a>
       </div>
