--- a/index.html
+++ b/index.html
@@ -173,10 +173,14 @@
       <div>
         </br>
         </br>
-        <a href="/file/售后服务承诺.pdf" download>售后服务承诺.pdf</a>
+<!--        <a href="./file/售后服务承诺.pdf" download>售后服务承诺.pdf</a>-->
+        <a href="./file/售后服务承诺.pdf" download="售后服务承诺.pdf">售后服务承诺.pdf</a>
+
         </br>
         </br>
-        <a href="/file/新能源应急预案.pdf" download>新能源应急预案.pdf</a>
+<!--        <a href="./file/新能源应急预案.pdf" download>新能源应急预案.pdf</a>-->
+        <a href="/./file/新能源应急预案.pdf" download="新能源应急预案.pdf">新能源应急预案.pdf</a>
+
         </br>
         </br>
         </br>
