--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </br>
         </br>
 <!--        <a href="./file/新能源应急预案.pdf" download>新能源应急预案.pdf</a>-->
-        <a href="/./file/新能源应急预案.pdf" download="新能源应急预案.pdf">新能源应急预案.pdf</a>
+        <a href="./file/新能源应急预案.pdf" download="新能源应急预案.pdf">新能源应急预案.pdf</a>
 
         </br>
         </br>
