--- a/index.html
+++ b/index.html
@@ -79,156 +79,85 @@
       <p class="intro">
       河北合舜机械科技有限公司成立于2015-11-16，法定代表人为唐留永，统一社会信用代码为91131081MA07L2KE5M，企业注册地址位于河北省廊坊市霸州经济技术开发区燕山路789号，所属行业为科技推广和应用服务业，经营范围包含：专用车辆、汽车配件、工程机械的技术开发、技术转让、技术咨询、技术服务及制造、销售，机械科技研发，机械科技研发，开发、生产、销售:农业机械设备及配件、食品工业专业设备、农副产品加工专用设备、农产品加工机械、包装机械、畜牧机械及配件、青贮饲料收获机、粮食烘干机械，生物质能源及相关设备的技术开发，农业技术开发、技术服务，计算机软硬件开发、系统集成、网络工程及技术咨询、技术转让、技术服务，灌溉技术开发，车载导航设备技术开发，罐式车辆配件、电器配件、散热器的制造，五金配件加工与销售，水污染治理服务（不包括污水搜集和治理活动），销售汽车、工程车、工程机械、汽车配件、金属材料、钢材、五金交电、二手车、建材、矿山机械及配件、化肥、卫星定位设备、车载导航设备，汽车维修，农业机械维修，各类工程建设活动，劳保用品生产与销售，货物进出口、技术进出口（国家禁止或涉及行政审批的货物和技术进出口除外）。（依法须经批准的项目，经相关部门批准后方可开展经营活动）。
       </p>
-<!--      <div class="intro">-->
-<!--        <p>-->
-<!--          智慧科技公司，总投资500万元。-->
-<!--        </p>-->
-<!--      </div>-->
-<!--      <div class="features">-->
-<!--        <div class="feature">-->
-<!--          <i class="fas fa-lightbulb"></i>-->
-<!--          <h4 class="feature-title">品牌创意</h4>-->
-<!--          <p class="feature-content">-->
-<!--            为企业设计独特的并能完美呈现企业价值观的视觉。-->
-<!--          </p>-->
-<!--        </div>-->
-<!--        <div class="feature">-->
-<!--          <i class="fas fa-chart-line"></i>-->
-<!--          <h4 class="feature-title">整合营销</h4>-->
-<!--          <p class="feature-content">-->
-<!--            通过市场进入分析，指定网络营销战略，网络营销实施。-->
-<!--          </p>-->
-<!--        </div>-->
-<!--        <div class="feature">-->
-<!--          <i class="fas fa-shopping-cart"></i>-->
-<!--          <h4 class="feature-title">电子商务</h4>-->
-<!--          <p class="feature-content">-->
-<!--            根据企业需求，开发不同的销售渠道，通过网上直销-->
-<!--          </p>-->
-<!--        </div>-->
-<!--        <div class="feature">-->
-<!--          <i class="fas fa-desktop"></i>-->
-<!--          <h4 class="feature-title">网页设计</h4>-->
-<!--          <p class="feature-content">-->
-<!--            通过网站建设，智能建站，域名主机，企业邮箱-->
-<!--          </p>-->
-<!--        </div>-->
-<!--        <div class="feature">-->
-<!--          <i class="fas fa-tachometer-alt"></i>-->
-<!--          <h4 class="feature-title">网站优化</h4>-->
-<!--          <p class="feature-content">-->
-<!--            网站推广是指将网站推广到国内各大知名网站和搜索引擎-->
-<!--          </p>-->
-<!--        </div>-->
-<!--        <div class="feature">-->
-<!--          <i class="fas fa-server"></i>-->
-<!--          <h4 class="feature-title">网站架设</h4>-->
-<!--          <p class="feature-content">-->
-<!--            通过绑定域名和服务器，把网站展现给全世界。-->
-<!--          </p>-->
-<!--        </div>-->
-<!--      </div>-->
     </section>
-<!--    <section id="showcases" class="showcases section-bg">-->
-<!--      <h2 class="title1" id="chenggonganli">成功案例</h2>-->
-<!--      <div class="filter-btns">-->
-<!--        <button class="filter-btn active" data-filter="*">全部</button>-->
-<!--        <button class="filter-btn" data-filter=".web">WEB</button>-->
-<!--        <button class="filter-btn" data-filter=".mobile">移动</button>-->
-<!--        <button class="filter-btn" data-filter=".science">科研</button>-->
-<!--      </div>-->
-<!--      <div class="cases">-->
-<!--        <div class="case-item web science">-->
-<!--          <img src="./static/images/gray-laptop-computer-showing-html-codes-in-shallow-focus-160107.jpg" alt="">-->
-<!--        </div>-->
-<!--        <div class="case-item web science">-->
-<!--          <img src="./static/images/photo-of-imac-near-macbook-1029757.jpg" alt="">-->
-<!--        </div>-->
-<!--        <div class="case-item web">-->
-<!--          <img src="./static/images/apple-laptop-notebook-office-39284.jpg" alt="">-->
-<!--        </div>-->
-<!--        <div class="case-item web">-->
-<!--          <img src="./static/images/apple-apple-device-design-desk-285814.jpg" alt="">-->
-<!--        </div>-->
-<!--        <div class="case-item mobile">-->
-<!--          <img src="./static/images/person-using-black-and-white-smartphone-and-holding-blue-230544.jpg" alt="">-->
-<!--        </div>-->
-<!--        <div class="case-item science">-->
-<!--          <img src="./static/images/person-holding-a-smartphone-892757.jpg" alt="">-->
-<!--        </div>-->
-<!--        <div class="case-item mobile web science">-->
-<!--          <img src="./static/images/blur-close-up-code-computer-546819.jpg" alt="">-->
-<!--        </div>-->
-<!--        <div class="case-item mobile">-->
-<!--          <img src="./static/images/bokeh-photography-of-person-holding-turned-on-iphone-1440727.jpg" alt="">-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </section>-->
     <section id="service" class="service">
       <h2 class="title1" id="fuwuliucheng">服务流程</h2>
 <!--      <p class="intro">-->
 <!--        <a href="/images/logo.png" download="/images/logo.png">-->
         <!--        网络综合公司，提供包括网络基础服务（比如域名，主机，邮箱）和网络增值服务（如网站建设和推广，网站优化）等业务-->
 <!--      </p>-->
-      <div>
-        </br>
-        </br>
-<!--        <a href="./file/售后服务承诺.pdf" download>售后服务承诺.pdf</a>-->
-        <a href="./file/售后服务承诺.pdf" download="售后服务承诺.pdf">售后服务承诺.pdf</a>
 
-        </br>
-        </br>
-<!--        <a href="./file/新能源应急预案.pdf" download>新能源应急预案.pdf</a>-->
-        <a href="./file/新能源应急预案.pdf" download="新能源应急预案.pdf">新能源应急预案.pdf</a>
-
-        </br>
-        </br>
-        </br>
-      </div>
 
       <div class="services">
         <div class="service-item">
           <i class="fas fa-comments"></i>
-          <h4 class="service-title">需求沟通</h4>
+<!--          <h4 class="service-title">需求沟通</h4>-->
           <p class="service-content">
             本公司产品以开出提货证日期为起始保修期，自制件保修期为12个月；底盘按汽车三包政策执行。
           </p>
         </div>
         <div class="service-item">
           <i class="fas fa-sign-in-alt"></i>
-          <h4 class="service-title">项目评估</h4>
+<!--          <h4 class="service-title">项目评估</h4>-->
           <p class="service-content">
             保修期内，本公司负责产品的三包服务。
           </p>
         </div>
         <div class="service-item">
           <i class="fas fa-file-signature"></i>
-          <h4 class="service-title">签订合同</h4>
+<!--          <h4 class="service-title">签订合同</h4>-->
           <p class="service-content">
             产品在首次使用前，免费调试，保修期内对产品跟踪巡察，实行动态管理。
           </p>
         </div>
         <div class="service-item">
           <i class="fas fa-user"></i>
-          <h4 class="service-title">提案阶段</h4>
+<!--          <h4 class="service-title">提案阶段</h4>-->
           <p class="service-content">
             公司的产品保修期内实行免费上门维修、免费更换配件，保修期外负责终身维修服务，并以优惠价格为用户提供零配件。
           </p>
         </div>
         <div class="service-item">
           <i class="fas fa-chalkboard-teacher"></i>
-          <h4 class="service-title">制作阶段</h4>
+<!--          <h4 class="service-title">制作阶段</h4>-->
           <p class="service-content">
             公司实行快捷服务，保修期内，提供24小时保障服务，如设备出现故障或用户有服务需求时，接到用户通知（电话）后，2小时内作出响应服务，无特殊情况下（自然灾害等人力不可抗拒的因素外）， 24小时内赶到现场处理，一般问题在8小时内解决，重大问题或其它无法迅速解决的问题在5天内解决或提出明确解决方案。
           </p>
         </div>
         <div class="service-item">
           <i class="fas fa-user-check"></i>
-          <h4 class="service-title">网站验收</h4>
+<!--          <h4 class="service-title">网站验收</h4>-->
           <p class="service-content">
             本公司生产的新能源专用车辆三电系统质保年限5年或20万公里。
           </p>
         </div>
+      </div>
+    </section>
+    <section id="team-introfuwuchengnuo" class="team-intro section-bg">
+      <h2 class="title1" id="fuwuchengnuo">服务承诺</h2>
+      <!--      <h2 class="title1" id="guanyuwomen">关于我们</h2>-->
+      <p class="intro">
+        1．本公司产品以开出提货证日期为起始保修期，自制件保修期为12个月；底盘按汽车三包政策执行。<br>
+        2、保修期内，本公司负责产品的三包服务；<br>
+        3、产品在首次使用前，免费调试，保修期内对产品跟踪巡察，实行动态管理；<br>
+        4、公司的产品保修期内实行免费上门维修、免费更换配件，保修期外负责终身维修服务，并以优惠价格为用户提供零配件；<br>
+        5、公司实行快捷服务，保修期内，提供24小时保障服务，如设备出现故障或用户有服务需求时，接到用户通知（电话）后，2小时内作出响应服务，无特殊情况下（自然灾害等人力不可抗拒的因素外）， 24小时内赶到现场处理，一般问题在8小时内解决，重大问题或其它无法迅速解决的问题在5天内解决或提出明确解决方案。<br>
+        6、本公司生产的新能源专用车辆三电系统质保年限5年或20万公里<br>
+      </p>
+      <div>
+        </br>
+        </br>
+        <!--        <a href="./file/售后服务承诺.pdf" download>售后服务承诺.pdf</a>-->
+        <a href="./file/售后服务承诺.pdf" download="售后服务承诺.pdf">售后服务承诺.pdf</a>
+
+        </br>
+        </br>
+        <!--        <a href="./file/新能源应急预案.pdf" download>新能源应急预案.pdf</a>-->
+        <a href="./file/新能源应急预案.pdf" download="新能源应急预案.pdf">新能源应急预案.pdf</a>
+
+        </br>
+        </br>
+        </br>
       </div>
     </section>
     <section id="team-intro" class="team-intro section-bg">
@@ -238,199 +167,10 @@
         地址：河北省廊坊市霸州经济技术开发区燕山路789号<br>电话：03167195088<br>联系人：朱女士
       </p>
 
-<!--      <div class="team-members">-->
-<!--        <div class="team-member">-->
-<!--          <div class="profile-image">-->
-<!--            <img src="./static/images/man-wearing-black-suit-2955376.jpg" alt="">-->
-<!--          </div>-->
-<!--          <h4 class="name">坦然</h4>-->
-<!--          <p class="position">前端工程师</p>-->
-<!--          <ul class="social-links">-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-weixin"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-weibo"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-github"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-linkedin"></i></a></li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--        <div class="team-member">-->
-<!--          <div class="profile-image">-->
-<!--            <img src="./static/images/business-woman-2697954_1920.jpg" alt="">-->
-<!--          </div>-->
-<!--          <h4 class="name">无畏</h4>-->
-<!--          <p class="position">前端工程师</p>-->
-<!--          <ul class="social-links">-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-weixin"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-weibo"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-github"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-linkedin"></i></a></li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--        <div class="team-member">-->
-<!--          <div class="profile-image">-->
-<!--            <img src="./static/images/selective-focus-photograph-of-man-wearing-gray-suit-jacket-1138903.jpg" alt="">-->
-<!--          </div>-->
-<!--          <h4 class="name">鑫扉</h4>-->
-<!--          <p class="position">前端工程师</p>-->
-<!--          <ul class="social-links">-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-weixin"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-weibo"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-github"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-linkedin"></i></a></li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--        <div class="team-member">-->
-<!--          <div class="profile-image">-->
-<!--            <img src="./static/images/smiling-woman-wearing-black-sweater-1587009.jpg" alt="">-->
-<!--          </div>-->
-<!--          <h4 class="name">小刘</h4>-->
-<!--          <p class="position">前端工程师</p>-->
-<!--          <ul class="social-links">-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-weixin"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-weibo"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-github"></i></a></li>-->
-<!--            <li><a href="http://www.baidu"><i class="fab fa-linkedin"></i></a></li>-->
-<!--          </ul>-->
-<!--        </div>-->
-<!--      </div>-->
     </section>
-<!--    <section class="data-section">-->
-<!--      <div class="data-piece">-->
-<!--        <i class="fas fa-code"></i>-->
-<!--        <div class="num">156</div>-->
-<!--        <div class="data-desc">行代码</div>-->
-<!--      </div>-->
-<!--      <div class="data-piece">-->
-<!--        <i class="fas fa-code"></i>-->
-<!--        <div class="num">288</div>-->
-<!--        <div class="data-desc">个奖项</div>-->
-<!--      </div>-->
-<!--      <div class="data-piece">-->
-<!--        <i class="fas fa-code"></i>-->
-<!--        <div class="num">156</div>-->
-<!--        <div class="data-desc">位客户</div>-->
-<!--      </div>-->
-<!--      <div class="data-piece">-->
-<!--        <i class="fas fa-code"></i>-->
-<!--        <div class="num">156</div>-->
-<!--        <div class="data-desc">个项目</div>-->
-<!--      </div>-->
-<!--    </section>-->
-<!--    <section id="company-activities" class="company-activities">-->
-<!--      <h2 class="title1" id="gongsidongtai">公司动态</h2>-->
-<!--      <p class="intro">关注公司动态，获取一手信息</p>-->
-<!--      <div class="activities">-->
-<!--        <div class="activity">-->
-<!--          <div class="act-image-wrapper">-->
-<!--            <img src="./static/images/activity01-image.jpg" alt="">-->
-<!--          </div>-->
-<!--          <div class="meta">-->
-<!--            <p class="data-published">-->
-<!--              <i class="far fa-calendar"></i>-->
-<!--              2020年4月22日-->
-<!--            </p>-->
-<!--            <p class="comments">-->
-<!--              <i class="far fa-comments"></i>-->
-<!--              33-->
-<!--              <span>条评论</span>-->
-<!--            </p>-->
-<!--          </div>-->
-<!--          <h2 class="act-title">提供互联网接入的ISP公司</h2>-->
-<!--          <article>-->
-<!--            ISP证，全称为互联网接入服务业务(ISP)，是第二类增值电信业务。根据国务院相关规定，从事增值电信业务，就需要办理相应的增值电信业务许可证，增值电信业务经营许可证是按照国务院《中华人民共和国电信条例》，由工信部、各省市通信管理局对从事增值电信业务的企业颁发的从业证明，否则就是无证经营。被查需要负法律责任。-->
-<!--          </article>-->
-<!--          <button class="read-more-btn">阅读更多</button>-->
-<!--        </div>-->
-<!--        <div class="activity">-->
-<!--          <div class="act-image-wrapper">-->
-<!--            <img src="./static/images/red-suspension-bridge-3493772.jpg" alt="">-->
-<!--          </div>-->
-<!--          <div class="meta">-->
-<!--            <p class="data-published">-->
-<!--              <i class="far fa-calendar"></i>-->
-<!--              2020年4月22日-->
-<!--            </p>-->
-<!--            <p class="comments">-->
-<!--              <i class="far fa-comments"></i>-->
-<!--              33-->
-<!--              <span>条评论</span>-->
-<!--            </p>-->
-<!--          </div>-->
-<!--          <h2 class="act-title">提供互联网接入的ISP公司</h2>-->
-<!--          <article>-->
-<!--            ISP证，全称为互联网接入服务业务(ISP)，是第二类增值电信业务。根据国务院相关规定，从事增值电信业务，就需要办理相应的增值电信业务许可证，增值电信业务经营许可证是按照国务院《中华人民共和国电信条例》，由工信部、各省市通信管理局对从事增值电信业务的企业颁发的从业证明，否则就是无证经营。被查需要负法律责任。-->
-<!--          </article>-->
-<!--          <button class="read-more-btn">阅读更多</button>-->
-<!--        </div>-->
-<!--        <div class="activity">-->
-<!--          <div class="act-image-wrapper">-->
-<!--            <img src="./static/images/watercrafts-on-river-3464632.jpg" alt="">-->
-<!--          </div>-->
-<!--          <div class="meta">-->
-<!--            <p class="data-published">-->
-<!--              <i class="far fa-calendar"></i>-->
-<!--              2020年4月22日-->
-<!--            </p>-->
-<!--            <p class="comments">-->
-<!--              <i class="far fa-comments"></i>-->
-<!--              33-->
-<!--              <span>条评论</span>-->
-<!--            </p>-->
-<!--          </div>-->
-<!--          <h2 class="act-title">提供互联网接入的ISP公司</h2>-->
-<!--          <article>-->
-<!--            ISP证，全称为互联网接入服务业务(ISP)，是第二类增值电信业务。根据国务院相关规定，从事增值电信业务，就需要办理相应的增值电信业务许可证，增值电信业务经营许可证是按照国务院《中华人民共和国电信条例》，由工信部、各省市通信管理局对从事增值电信业务的企业颁发的从业证明，否则就是无证经营。被查需要负法律责任。-->
-<!--          </article>-->
-<!--          <button class="read-more-btn">阅读更多</button>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </section>-->
   </div>
   <footer>
     <div class="footer-menus">
-<!--      <div class="contact-us">-->
-<!--        <p class="menu-title">联系我们</p>-->
-<!--        <p>地址</p>-->
-<!--        <p>电话</p>-->
-<!--        <p>传真</p>-->
-<!--&lt;!&ndash;        <p>电子邮件：llgworks@163.com</p>&ndash;&gt;-->
-<!--        <p>电子邮件</p>-->
-<!--      </div>-->
-<!--      <div class="service-menu footer-menu">-->
-<!--        <p class="menu-title">服务概览</p>-->
-<!--        <ul class="menu-items">-->
-<!--          <li><a href="#">网站建设</a></li>-->
-<!--          <li><a href="#">域名购买</a></li>-->
-<!--          <li><a href="#">网页设计</a></li>-->
-<!--          <li><a href="#">移动应用</a></li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--      <div class="service-menu footer-menu">-->
-<!--        <p class="menu-title">成功案例</p>-->
-<!--        <ul class="menu-items">-->
-<!--          <li><a href="#">桌面网站</a></li>-->
-<!--          <li><a href="#">移动网站</a></li>-->
-<!--          <li><a href="#">科研网站</a></li>-->
-<!--          <li><a href="#">软件应用</a></li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--      <div class="service-menu footer-menu">-->
-<!--        <p class="menu-title">公司动态</p>-->
-<!--        <ul class="menu-items">-->
-<!--          <li><a href="#">信息公开</a></li>-->
-<!--          <li><a href="#">最近新闻</a></li>-->
-<!--          <li><a href="#">最新博客</a></li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--      <div class="service-menu footer-menu">-->
-<!--        <p class="menu-title">帮助与支持</p>-->
-<!--        <ul class="menu-items">-->
-<!--          <li><a href="#">帮助中心</a></li>-->
-<!--          <li><a href="#">联系客服</a></li>-->
-<!--          <li><a href="#">文档资源</a></li>-->
-<!--        </ul>-->
-<!--      </div>-->
-<!--      <p class="icp-info">陕ICP备19016694号</p>-->
-<!--      <p class="rights">&copy; 2020 智慧科技有限公司</p>-->
       <p class="rights">&copy; 本网站仅供交流与学习使用，所有内容仅供参考，严禁用于商业用途。请尊重版权与知识产权。</p>
       <p class="rights">&copy; 本网站旨在促进学习与学术交流，所有信息仅供个人学习使用，禁止用于任何商业或非法用途。</p>
       <p class="rights">&copy; 本网站所提供的内容仅供教育和交流之用，不得用于任何形式的商业活动或其他违法用途。</p>
