--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <a href="#guanyuwomen">关于我们</a>
 <!--      <a href="#chenggonganli">成功案例</a>-->
       <a href="#fuwuliucheng">服务流程</a>
+      <a href="#fuwuchengnuo">服务承诺</a>
       <a href="#tuanduijieshao">联系我们</a>
 <!--      <a href="#gongsidongtai">公司动态</a>-->
 <!--      <a href="#"><i class="fas fa-search"></i></a>-->
